--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body, html {
+  overflow-x: hidden !important;
+  max-width: 100vw !important;
+}
+
+
+
 .o/* Zeilenumbruch erzwingen */
 h1, h2, h3, h4, h5, h6 { /* Je nach deinem HTML-Tag anpassen */
     word-wrap: break-word;  /* Wortumbruch erzwingen */
